Feat : swagger documentation for feature
